Fixed scrollbar and range input for mozilla

--- a/app/assets/scss/components/main/order.scss
+++ b/app/assets/scss/components/main/order.scss
@@ -2,11 +2,11 @@
   width: 7px;
   border-radius: 3px;
   background-color: #3d4050;
+}
 
-  &-thumb {
-    border-radius: 3px;
-    background-color: #3e9cdc;
-  }
+.order-form__system-choice-list::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: #3e9cdc;
 }
 
 .order {
@@ -245,9 +245,11 @@
         line-height: 34px;
         border-radius: 3px;
         position: absolute;
+        scrollbar-width: 7px;
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
+        scrollbar-color: #3e9cdc #3d4050;
         transition: height .4s ease-in-out;
         background-color: rgba(39, 39, 51, .9);
 
@@ -285,24 +287,24 @@
       margin-left: 0;
       padding: 12px 0;
 
-      &::-webkit-slider {
-        &-thumb {
-          height: 23px;
-          width: 23px;
-          cursor: pointer;
-          margin-top: -8px;
-          border-radius: 50%;
-          background: #3e9cdc;
-          -webkit-appearance: none;
-          border: 3px solid #286690;
-        }
-        &-runnable-track {
-          width: 100%;
-          height: 6px;
-          cursor: pointer;
-          border-radius: 3px;
-          background: rgba(255,255,255,.85);
-        }
+      &::-webkit-slider-thumb,
+      &::-moz-range-thumb {
+        height: 23px;
+        width: 23px;
+        cursor: pointer;
+        margin-top: -8px;
+        border-radius: 50%;
+        background: #3e9cdc;
+        -webkit-appearance: none;
+        border: 3px solid #286690;
+      }
+      &::-webkit-slider-runnable-track,
+      &::-moz-range-track {
+        width: 100%;
+        height: 6px;
+        cursor: pointer;
+        border-radius: 3px;
+        background: rgba(255,255,255,.85);
       }
 
       &-wrapper {
